Datepicker z-index fixes

--- a/css/default_site.css
+++ b/css/default_site.css
@@ -62,14 +62,6 @@ div.ui-effects-wrapper {
   text-transform: uppercase;
 }
 
-#ui-datepicker-div {
-  z-index: 2000;
-}
-
-.ui-datepicker-trigger {
-  padding: 0;
-}
-
 .inline-error {
   color: red;
   width: auto;
