--- a/scss/bootstrap-3/_form-controls.scss
+++ b/scss/bootstrap-3/_form-controls.scss
@@ -27,3 +27,7 @@ do need to do something.
     width: 100%;
   }
 }
+/* Datepicker z-index used to set overlay z-index, must appear above map etc. */
+#ui-datepicker-div {
+  z-index: 2000 !important;
+}
