--- a/scss/generic/_form-controls.scss
+++ b/scss/generic/_form-controls.scss
@@ -91,3 +91,8 @@ input.findme {
   width: 500px !important;
   box-sizing: border-box;
 }
+
+/* Datepicker z-index used to set overlay z-index, must appear above map etc. */
+.hasDatepicker {
+  z-index: 2000 !important;
+}
